--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,44 @@
 /*  your css code here. If applicable */
+
+body {
+	margin: 0;
+	padding: 0;
+    font-family: Arial, sans-serif;
+}
+
+.hero-section {
+	height: 500px;
+	background-image: url('https://m.media-amazon.com/images/I/51ZVeRqZvGL._SX3000_.jpg');
+    background-size: 100% 100%;
+	display:flex;
+	justify-content: center;
+	align-items:center;
+}
+
+.product-card {
+	width: 300px;
+    height: 300px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-right: 20px;
+}
+
+.product-card img {
+	width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+.product-card-content {
+	padding: 10px;
+}
+
+.product-card-title {
+	font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.product-card-description {
+	font-size: 14px;
+}
